--- a/styles.scss
+++ b/styles.scss
@@ -53,3 +53,6 @@ main { /* stylelint-disable-line */
 }
 
 @import "scss/grid";
+@import "scss/takkar";
+@import "scss/body";
+@import "scss/myndband";
