--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,6 @@ main {
   @media (max-width: 500px) {
     .col-small-12 {
       width: 100%; } }
-body{
-  background-color: #383838;
-}
+
+body {
+  background-color: gray; }
