--- a/scss/body.scss
+++ b/scss/body.scss
@@ -1,3 +1,45 @@
-body{
+body {
   background-color: gray;
+}
+
+h1, h2, p, div {
+  color: white;
+  text-decoration: none;
+}
+
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: underline;
+}
+
+.flokkur {
+  border-bottom: 1px solid white;
+  margin-top: 50px;
+
+}
+
+.vidbox {
+  border: 1px solid white;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 50px;
+
+}
+
+.myndband {
+  border: 1px solid white;
+  margin: auto;
+
 }
