--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,56 @@ main {
 
 body {
   background-color: gray; }
+
+h1, h2, p, div {
+  color: white;
+  text-decoration: none; }
+
+a:link {
+  text-decoration: none; }
+
+a:visited {
+  text-decoration: none; }
+
+a:hover {
+  text-decoration: none; }
+
+a:active {
+  text-decoration: underline; }
+
+.flokkur {
+  border-bottom: 1px solid white;
+  margin-top: 50px; }
+
+.vidbox {
+  border: 1px solid white;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 50px; }
+
+.myndband {
+  border: 1px solid white;
+  margin: auto; }
+
+.myndbandaDiv {
+  display: flex;
+  justify-content: center; }
+
+.takkadiv {
+  display: flex;
+  justify-content: center;
+  flex-direction: row; }
+
+footer {
+  display: flex;
+  justify-content: center; }
+  footer a {
+    color: white; }
+  footer a:link {
+    text-decoration: none; }
+  footer a:visited {
+    text-decoration: none; }
+  footer a:hover {
+    text-decoration: none; }
+  footer a:active {
+    text-decoration: none; }
