--- a/styles.css
+++ b/styles.css
@@ -59,4 +59,9 @@ main {
       width: 100%; } }
 
 body {
-  background-color: gray; }
+  background-color: gray;
+  color: white; }
+
+main div a {
+  text-decoration: none;
+  color: white; }
