--- a/scss/myndband.scss
+++ b/scss/myndband.scss
@@ -1,3 +1,15 @@
+.myndbandaDiv {
+  display: flex;
+  justify-content: center;
+}
+
+.takkadiv{
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+
+}
+
 footer{
   display: flex;
   justify-content: center;
