index.html css-ið

--- a/scss/body.scss
+++ b/scss/body.scss
@@ -1,25 +1,22 @@
-<<<<<<< HEAD
+header{
+  display:flex;
+  justify-content: center;
+  padding-top: $gutter;
+}
 
-
-body{
-=======
 body {
->>>>>>> 46b107333bdcc54bf0518831c3c95726669a88d2
-  background-color: gray;
-  color: white;
+  background-color: #383838;
 }
-main{
-  div a{
-    text-decoration: none;
-    color: white;
-  }
-}
-
-h1, h2, p, div {
+ h2, p, div {
   color: white;
   text-decoration: none;
 }
 
+h1{
+  color: white;
+  margin-bottom: 20px;
+
+}
 
 a:link {
     text-decoration: none;
@@ -37,22 +34,36 @@ a:active {
     text-decoration: underline;
 }
 
-.flokkur {
-  border-bottom: 1px solid white;
-  margin-top: 50px;
 
+.flokkur {
+  margin-top: 50px;
+  border-bottom: 1px solid white;
 }
 
 .vidbox {
-  border: 1px solid white;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
   margin-bottom: 50px;
 
+  @media(max-width: $min-width) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
-.myndband {
-  border: 1px solid white;
-  margin: auto;
 
+
+.myndband {
+  width: 100%;
+  min-width: 200px;
+  max-width: 400px;
+  overflow: hidden;
+  margin-bottom: 20px;
+
+
+  @media (max-width: $min-width) {
+    display: flex;
+  }
 }
