--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -1,9 +1,9 @@
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -($gutter / 2);
+  margin-right: ($gutter / 2);
   margin-bottom: $gutter;
-  margin-left: -($gutter / 2);
+  margin-left: ($gutter / 2);
 }
 
 // mixin sem reiknar nákvæmar prósentur útfrá dálkum
@@ -28,16 +28,7 @@
     @include columns(4);
   }
 
-  &-mid {
-    @media (max-width: $width-mid) {
-      &-12 {
-        @include columns(12);
-      }
-      &-6 {
-        @include columns(6);
-      }
-    }
-  }
+
   &-small {
     @media (max-width: $width-small) {
       &-12 {
