--- a/scss/myndband.scss
+++ b/scss/myndband.scss
@@ -1,36 +1,7 @@
 .myndbandaDiv {
   display: flex;
   justify-content: center;
-}
-
-.takkadiv{
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-
-}
-
-footer{
-  display: flex;
-  justify-content: center;
-
-a {
-  color: white;
-}
-
-a:link {
-    text-decoration: none;
-}
-
-a:visited {
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: none;
-}
-
-a:active {
-    text-decoration: none;
+  video {
+    object-fit: cover;
 }
 }
