--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,9 @@ main {
     max-width: 100px;
     max-height: 70px;
     padding: 4px; }
+  @media (max-width: 500px) {
+    .takkadiv {
+      padding-top: 100px; } }
 
 header h1 {
   display: flex;
@@ -86,17 +89,21 @@ footer {
   footer a:active {
     text-decoration: none; }
 
+header {
+  display: flex;
+  justify-content: center;
+  padding-top: 20px; }
+
 body {
-  background-color: gray;
-  color: white; }
+  background-color: #383838; }
 
-main div a {
-  text-decoration: none;
-  color: white; }
-
-h1, h2, p, div {
+h2, p, div {
   color: white;
   text-decoration: none; }
+
+h1 {
+  color: white;
+  margin-bottom: 20px; }
 
 a:link {
   text-decoration: none; }
@@ -111,21 +118,38 @@ a:active {
   text-decoration: underline; }
 
 .flokkur {
-  border-bottom: 1px solid white;
-  margin-top: 50px; }
+  margin-top: 50px;
+  border-bottom: 1px solid white; }
 
 .vidbox {
-  border: 1px solid white;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
   margin-bottom: 50px; }
+  @media (max-width: 500px) {
+    .vidbox {
+      display: flex;
+      flex-direction: column; } }
 
 .myndband {
-  border: 1px solid white;
-  margin: auto; }
+  width: 100%;
+  min-width: 200px;
+  max-width: 400px;
+  overflow: hidden;
+  margin-bottom: 20px; }
+  @media (max-width: 500px) {
+    .myndband {
+      display: flex; } }
 
 .myndbandaDiv {
   display: flex;
   justify-content: center; }
   .myndbandaDiv video {
-    object-fit: cover; }
+    object-fit: cover;
+    max-width: 800px;
+    max-height: 600px; }
+  @media (max-width: 500px) {
+    .myndbandaDiv {
+      max-width: 400px;
+      max-height: 300px; } }
