--- a/styles.scss
+++ b/styles.scss
@@ -43,7 +43,7 @@ main { /* stylelint-disable-line */
   // hér sem hidden, þá fáum við ekki lárétta skrunstiku
   overflow-x: hidden;
 
-    @media (max-width: $width-mid) {
+    @media (max-width: $min-width) {
       padding: 0 $gutter;
     }
 }
