--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ main {
     padding: 4px; }
   @media (max-width: 500px) {
     .takkadiv {
-      padding-top: 100px; } }
+      padding-top: 250px; } }
 
 header h1 {
   display: flex;
@@ -115,7 +115,7 @@ a:hover {
   text-decoration: none; }
 
 a:active {
-  text-decoration: underline; }
+  text-decoration: none; }
 
 .flokkur {
   margin-top: 50px;
@@ -145,10 +145,6 @@ a:active {
 .myndbandaDiv {
   display: flex;
   justify-content: center; }
-  .myndbandaDiv video {
-    object-fit: cover;
-    max-width: 800px;
-    max-height: 600px; }
   @media (max-width: 500px) {
     .myndbandaDiv {
       max-width: 400px;
